# swc-plugin-import-resolver

./: .gitignore  AGENT.md  BLOG.md  Cargo.toml  LICENSE  README.en.md  README.md  build.ps1  package.json  test-plugin.js
.cargo/: config.toml
.github/workflows/: publish.yml
src/: lib.rs
tests/: transform_tests.rs
