[package]
name = "swc-plugin-import-resolver"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
globset = "0.4.10"
regex = "1.8.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.97"
swc_core = { version = "68.0.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_parser = "0.141.1"
swc_ecma_transforms_testing = "0.137.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "symbols"
